tests/ui/compile-fail/pinned_drop/no_fn.stderr
error: no rules expected the token `)`
 --> tests/ui/compile-fail/pinned_drop/no_fn.rs:6:1
  |
6 | #[pinned_drop]
  | ^^^^^^^^^^^^^^ no rules expected this token in macro call
  |
note: while trying to match `fn`
 --> src/macros.rs
  |
  |             fn drop($($sig:tt)*) {
  |             ^^
  = note: this error originates in the attribute macro `pinned_drop` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo: PinnedDrop` is not satisfied
 --> tests/ui/compile-fail/pinned_drop/no_fn.rs:3:1
  |
3 | #[pin_data(PinnedDrop)]
  | ^^^^^^^^^^^^^^^^^^^^^^^ the trait `PinnedDrop` is not implemented for `Foo`
  |
  = note: this error originates in the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)
